# axiomander

./: #AGENTS.md#  #complex_contracts.smt2#  #component_compiler_specification.md#  .#AGENTS.md  .aider.chat.history.md  .aider.input.history  .clinerules  .gitignore  .gitmodules  .nia.cache  AGENTS.md  AXIOMANDER_EMACS_USAGE_GUIDE.md  BLACK_HOLES.md~  CONTEXT.md  EMACS_SETUP_INSTRUCTIONS.md  Examples.md  Kanban.md  Makefile  PR_MESSAGE.md  README.md  UNFOLDING_SPEC.md  _CoqProject  axiomander-example.el  axiomander-example.el~  axiomander-simple.el  axiomander.opam  complex_contracts.smt2  component_compiler_specification.md  component_development_guide.md  component_storage_specification.md  current-status.txt  design_by_contract_agent_system_plan.md  design_by_contract_agent_system_plan.md~  dune  dune-project  dune-rocq-investigation-summary.md  fixed_complex_contracts.smt2  flake.nix  git-commit-message.md  index.html  (+30 more)
.aider.tags.cache.v4/: cache.db
.axiomander/: config.json  contracts.json  evidence_graph.json  file_hashes.json  graph.json
.axiomander/cache/: graph.json
.axiomander/transcripts/: transcript_1779796284.json  transcript_1779796355.json  transcript_1779801758.json  transcript_1779871835.json  transcript_1779871878.json  transcript_1779871926.json  transcript_1779872118.json  transcript_1779872161.json  transcript_1779872447.json  transcript_1779874921.json  transcript_1779874946.json  transcript_1779875697.json  transcript_1779875728.json  transcript_1779876238.json  transcript_1779876328.json  transcript_1779877205.json  transcript_1779883094.json  transcript_1779884185.json  transcript_1779884207.json  transcript_1779884902.json  transcript_1779885365.json  transcript_1779887534.json  transcript_1779889013.json  transcript_1779891980.json  transcript_1779893025.json  transcript_1779893589.json  transcript_1779896238.json  transcript_1779896507.json  transcript_1779911837.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 09ssq1x5avlkvniqj9fycsf541ymsdxa-source  0spdnlfcd3m0h0vpdy30n72sfh50y12j-source  55z53i8nflvx4y9662rc0b6xb9y43b66-source  bhiwv7346m46p0xir6wk8xiz9k5gvj76-source  ficm25pyjjr5habmhgka5594smdhckkk-source  hc3h3s46sl3r218jsx0c3c6vpym5qi32-source  mh1njn2mfck5m31kc30v4a05x7imkg1q-source  ppl92nbk4ixwq2a5gqwp4nllm8sssv0b-source  qrwb4ffv06xfb8aah28p1mgs0a8d0sr7-source  r5p6sphw750ccfp23z1nj9p0si9kxrid-source  zrfsqn9i68kwvb6idjdfk5nhdbdcf6xk-source
.github/workflows/: ci.yml
bank_data/: alice.json  bob.json  charlie.json
coq/: Auth.v  AuthExamples.v  BinarySearch.v  BlackHoles.v  BulletTest.v  CallerOkTest.v  CallerTest.v  ConstReturn.v  ContractInvariants.v  D1Fold.v  Decompose.v  DemoAccount.v  DictModel.v  Examples.v  Experiment.v  Generated.v  HammerTest.v  Imp.v  LambdaA.v  LambdaAEmbed.v  LastGenerated.v  ListPredicates.v  PExprToProp.v  ProfileFix.v  ProtoFix.v  Pydantic.v  PydanticExamples.v  RegMatch.v  Snakelet.v  SnakeletDemo.v  SnakeletEval.v  SnakeletExnDemo.v  SnakeletExnLang.v  SnakeletExnTactics.v  SnakeletExnWp.v  SnakeletIterable.v  SnakeletLang.v  SnakeletTactics.v  SnakeletWp.v  StagedFinal.v  (+11 more)
docs/: #intermediate-calculus-strategy.md#  .#intermediate-calculus-strategy.md  ARCHITECTURE.md  BLACK_HOLES.md  CONTRACT_LANGUAGE.md  CONTRACT_STUBS.md  DATATYPES_SPEC.md  FUTURE_WORK.md  Iris-Migration.md  Kanban.md  MCP_TOOL.md  SPLITTING_AND_HAVOC.md  STRATEGY.md  WP_CALCULUS.md  architecture-overview.md  architecture.md  axiomander-emacs-lsp-setup.md  axiomander_heap_management_best_practices.md  axiomander_iris_backend_prototype_plan.md  axiomander_nagini_lifted_syntax.md  axiomander_review.md  case-dispatch-verification.md  comparative-assessment.md  coq-lsp-mcp-issues.md  dual-search-refutation.md  finite-iterable-relations.md  fluid-contract-language-theory.md  fluid-lowerer-design.md  frame-lemmas.md  generator-specs.md  incremental_verification_cache_design.md  intermediate-calculus-strategy.md  ir-syntax.md  iris-fulfil-order-implementation.md  iris-migration-plan.md  mcp_tool_transparency.md  per-obligation-architecture.md  predicate-lifting-plan.md  property-test-generation.md  pydantic-model-implementation.md  (+7 more)
docs/iris-paper/: .gitignore  README.md  iris-workshop-paper.notes.md  iris-workshop-paper.tex  revue-1.md
docs/issues/: packaging-import-surface-pr.md  packaging-import-surface.md
docs/slides/: .gitignore  README.md  fluid-supercompiler-slides.md  overview-slides.md  package-lock.json  package.json  slides.md
docs/vericoding-paper/: README.md  acmart.cls  vericoding-paper.tex
editors/emacs/: README.md  SETUP.md  axiomander-mode.el  axiomander-pkg.el  axiomander-setup.el  axiomander.el
examples/: #simple_contracts.py#  challenge.v  complex_contracts.py  conditional_contracts.py  conditional_contracts.py~  contracts_demo.py  intermediate_contracts.py  mathematical_contracts.py~  simple_contracts.py~  student_schedule.py  wpc_conditional_tests.py  wrong_contracts.py
examples/resource_backend/: box_bump.py  expected_obligation.json  expected_skeleton.v
ic.smt2/: absolute_difference.smt2  distance_manhattan.smt2  linear_interpolation.smt2  min_of_two.smt2  quadratic_discriminant.smt2  rectangle_area.smt2  sign_function.smt2
py/: proof_obligations.py
py/axiomander/: __init__.py  proof_obligations.py  supercompiler_bridge.py  wp_transformer.py
py/contracts/: __init__.py
py/examples/: binary_search.py  demo.py  lint_demo.py  pydantic_contracts.py  simple_test.py
py/oracle/: advisor.py  cache.py  case_extractor.py  client.py  contract_ir.py  contract_ir_iris.py  contract_linter.py  contract_runtime.py  coq_session.py  coqpyt_session.py  docstring_contracts.py  dump_obligations.py  evidence_graph.py  generate_property_tests.py  py_ir.py  (+26 more)
stubs/: builtins.pyi  math_stubs.pyi
tests/: test_absolute_value.py  test_absolute_value.py~  test_purity_analysis.py  test_z3_pipeline.py
verification_output/: always_positive.smt2  bounded_add.smt2  increment_function.smt2  non_negative_square.smt2
(+221 files in other folders)
