opam-version: "2.0"
name: "axiomander"
synopsis: "Hoare-logic verification pipeline for Python"
maintainer: "dev@axiomander.local"
version: "0.1.0"
homepage: "https://github.com/scidonia/axiomander"
bug-reports: "https://github.com/scidonia/axiomander/issues"
depends: [
  "ocaml" {>= "5.2.0"}
  "dune" {>= "3.17"}
  "coq" {>= "8.20.0"}
  "coq-hammer"
  "coq-iris"
  "coq-stdpp"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/scidonia/axiomander.git"
