opam-version: "2.0"
name: "axiomander"
synopsis: "Hoare-logic verification pipeline for Python"
authors: ["axiomander contributors"]
license: "MIT"
maintainer: "dev@axiomander.local"
version: "0.1.0"
homepage: "https://github.com/scidonia/axiomander"
bug-reports: "https://github.com/scidonia/axiomander/issues"
depends: [
  "ocaml" {>= "5.2.0"}
  "dune" {>= "3.17"}
  "rocq-core" {>= "9.0.0"}
  "rocq-stdlib" {>= "9.0.0"}
  "coq-hammer"
  "rocq-iris"
  "rocq-stdpp"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/scidonia/axiomander.git"
