[project]
name = "verify-contracts"
version = "0.2.0"
description = "Verify Python assert-based contracts using Coq + SMT + LLM"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
]

[project.scripts]
verify-contracts-mcp = "py.oracle.mcp_server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["py", "py.*"]
