[project]
name = "axiomander"
version = "0.4.0"
description = "Hoare-logic verification pipeline for Python — assert contracts → Coq + SMT + LLM"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pygls>=1.0",
    "lsprotocol",
    "cattrs",
    "pydantic>=2.0",
    "z3-solver>=4.16.0.0",
    "coqpyt",
]

[project.scripts]
axiomander-mcp = "oracle.mcp_server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["py", "py.*"]

[tool.uv.sources]
coqpyt = { git = "https://github.com/sr-lab/coqpyt.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
