[project]
name = "axiomander"
version = "0.9.0"
description = "Hoare-logic verification pipeline for Python — assert contracts → Coq + SMT + LLM"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pygls>=1.0",
    "lsprotocol",
    "cattrs",
    "pydantic>=2.0",
    "z3-solver>=4.16.0.0",
    "coqpyt",
    "langgraph",
    "langchain-openai",
]

[project.optional-dependencies]
testgen = ["hypothesis>=6.0"]

[project.scripts]
axiomander-mcp = "axiomander.oracle.mcp_server:main"
axiomander = "axiomander.oracle.mcp_server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["py"]
include = ["axiomander*"]

[tool.uv.sources]
coqpyt = { git = "https://github.com/sr-lab/coqpyt.git" }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that invoke the full Coq toolchain (deselect with -m 'not slow')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "hypothesis>=6.0",
]
