opam-version: "2.0"
name: "refactoring-robots"
synopsis: "Hoare-logic verification pipeline for Python"
maintainer: "dev@refactoring-robots.local"
version: "0.1.0"
homepage: "https://github.com/user/refactoring-robots"
bug-reports: "https://github.com/user/refactoring-robots/issues"
depends: [
  "ocaml" {>= "5.2.0"}
  "dune" {>= "3.17"}
  "coq" {>= "8.20.0"}
  "coq-hammer"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/user/refactoring-robots.git"
